; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/ar71xx/files/drivers/leds/extr_leds-wndr3700-usb.c_wndr3700_usb_led_get.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/ar71xx/files/drivers/leds/extr_leds-wndr3700-usb.c_wndr3700_usb_led_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.led_classdev = type { i32 }

@AR71XX_RESET_GE1_PHY = common dso_local global i32 0, align 4
@LED_OFF = common dso_local global i32 0, align 4
@LED_FULL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.led_classdev*)* @wndr3700_usb_led_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wndr3700_usb_led_get(%struct.led_classdev* %0) #0 {
  %2 = alloca %struct.led_classdev*, align 8
  store %struct.led_classdev* %0, %struct.led_classdev** %2, align 8
  %3 = load i32, i32* @AR71XX_RESET_GE1_PHY, align 4
  %4 = call i64 @ath79_device_reset_get(i32 %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i32, i32* @LED_OFF, align 4
  br label %10

8:                                                ; preds = %1
  %9 = load i32, i32* @LED_FULL, align 4
  br label %10

10:                                               ; preds = %8, %6
  %11 = phi i32 [ %7, %6 ], [ %9, %8 ]
  ret i32 %11
}

declare dso_local i64 @ath79_device_reset_get(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
